# otaclient-iot-logging-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Dockerfile_tpm2.0  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.claude/: settings.json
.github/workflows/: claude-code-review.yml  claude.yml  gen_requirements_txt.yaml  issue-metrics.yml  on_release.yaml  release.yaml  sync_lockfile.yml  test.yaml
examples/: aws_profile_info.yaml  otaclient-logger.service
otaclient_iot_logging_server/: __init__.py  __main__.py  aws_iot_logger.py  boto3_session.py  configs.py  greengrass_config.py
proto/: README.md  hatch_build.py  otaclient_iot_logging_server_v1.proto  pyproject.toml
proto/src/otaclient_iot_logging_server_pb2/: __init__.py
proto/src/otaclient_iot_logging_server_pb2/v1/: __init__.py
src/otaclient_iot_logging_server/: .gitignore  __init__.py  __main__.py  _common.py  _log_setting.py  _sd_notify.py  _utils.py  aws_iot_logger.py  boto3_session.py  config_file_monitor.py  configs.py  ecu_info.py  greengrass_config.py  log_proxy_server.py  servicer.py
src/otaclient_iot_logging_server/v1/: __init__.py  _types.py  api_stub.py  otaclient_iot_logging_server_v1_pb2.py  otaclient_iot_logging_server_v1_pb2.pyi  otaclient_iot_logging_server_v1_pb2_grpc.py  servicer.py  types.py
src/proto_wrapper/: proto_wrapper.py
tests/: conftest.py  test__log_setting.py  test__main__.py  test__sd_notify.py  test__utils.py  test_aws_iot_logger.py  test_boto3_session.py  test_config_file_monitor.py  test_configs.py  test_ecu_info.py  test_greengrass_config.py  test_log_proxy_server.py
tests/data/: aws_profile_info.yaml  ecu_info.yaml  gg_v1_cfg.json  gg_v2_cfg.yaml  gg_v2_cfg.yaml_tpm2.0  sample_cert.der  sample_cert.pem
tests/test_proto_wrapper/: example_pb2_wrapper.py  test_proto_wrapper.py
tools/: api_health_check.py  api_put_log.py
