[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling>=1.20",
]

[project]
name = "otaclient-iot-logging-server"
description = "A logging server that uploads logs sent from otaclient to AWS cloudwatch."
readme = "README.md"
license = "Apache-2.0"
license-files = [
  "LICENSE",
]
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "aiohttp>=3.10.11,<3.14",
  "awscrt>=0.16.9,<0.32",
  "boto3>=1.34.35,<1.43",
  "grpcio>=1.70,<1.79",
  "protobuf>=4.25.8,<7.35",
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.2.1,<3",
  "pyyaml>=6.0.1,<7",
  "typing-extensions>=4",
]
urls.Homepage = "https://github.com/tier4/otaclient-iot-logging-server"
urls.Source = "https://github.com/tier4/otaclient-iot-logging-server"
scripts.iot_logging_server = "otaclient_iot_logging_server.__main__:main"

[dependency-groups]
dev = [
  "coverage~=7.4",
  "pre-commit>=3,<5",
  "pytest>=7,<10",
  "pytest-asyncio>=0.23,<2",
  "pytest-env~=1.1",
  "pytest-mock~=3.12",
]

[tool.hatch]
build.hooks.vcs.version-file = "src/otaclient_iot_logging_server/_version.py"
build.targets.sdist.exclude = [
  "/.github",
  "/docs",
]
build.targets.wheel.only-include = [
  "src",
]
build.targets.wheel.sources = [
  "src",
]
version.source = "vcs"

[tool.ruff]
target-version = "py310"
# NOTE: not include tests and tools for now
include = [
  "pyproject.toml",
  "src/**/*.py",
  "tests/**/*.py",
]
extend-exclude = [
  "*_pb2.py*",
  "*_pb2_grpc.py*",
]
lint.select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "E4",
  "E7",
  "E9",
  "F",   # pyflakes
  "I",   # isort
  "ICN", # flake8-import-conventions
  "Q",   # flake8-quotes
]
lint.ignore = [
  "E203", # (white space before ':'): this error conflicts with black linting
  "E266", # (too many leading '#'): sometimes we use multiple # for separting sections
  "E701", # (multiple statements on one line)
  "S101", # (use of assert): mostly we use assert for typing
]
lint.pydocstyle.convention = "google"

[tool.pytest]
ini_options.env = [
  "AWS_PROFILE_INFO=tests/data/aws_profile_info.yaml",
  "GREENGRASS_V1_CONFIG=tests/data/gg_v1_cfg.json",
  "GREENGRASS_V2_CONFIG=tests/data/gg_v2_cfg.yaml",
]
ini_options.asyncio_mode = "auto"
ini_options.log_auto_indent = true
ini_options.log_format = "%(asctime)s %(levelname)s %(filename)s %(funcName)s,%(lineno)d %(message)s"
ini_options.log_cli = true
ini_options.log_cli_level = "INFO"
ini_options.pythonpath = [
  "src",
]
ini_options.testpaths = [
  "tests",
]

[tool.coverage]
run.branch = true
run.relative_files = true
run.source = [
  "otaclient_iot_logging_server",
]
report.exclude_also = [
  "@(abc\\.)?abstractmethod",
  "class .*\\bProtocol\\):",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
report.omit = [
  "**/*_pb2.py*",
  "**/*_pb2_grpc.py*",
]
report.show_missing = true
report.skip_empty = true
