[build-system]
build-backend = "hatchling.build"
requires = [
  "grpcio-tools>=1.57,<1.79",
  "hatch-vcs",
  "hatchling>=1.20",
]

[project]
name = "otaclient-iot-logging-server-pb2"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
urls.Source = "https://github.com/tier4/otaclient-iot-logging-server/proto"

[tool.hatch.build.hooks.custom]
proto_builds = [
  { proto_file = "otaclient_iot_logging_server_v1.proto", output_package = "otaclient_iot_logging_server_pb2/v1", api_version = "1.0.0" },
]

[tool.hatch.build.hooks.vcs]
version-file = "src/otaclient_iot_logging_server_pb2/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "whl",
]

[tool.hatch.build.targets.wheel]
exclude = [
  "**/.gitignore",
  "**/*README.md",
  "whl",
]
only-include = [
  "src",
]
sources = [
  "src",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.black]
line-length = 88
target-version = [
  'py311',
]
extend-exclude = '''(
  ^.*(_pb2.pyi?|_pb2_grpc.pyi?)$
)'''

[tool.isort]
profile = "black"
extend_skip_glob = [
  "*_pb2.py*",
  "_pb2_grpc.py*",
]

[tool.pyright]
exclude = [
  "**/__pycache__",
  "**/.venv",
]
ignore = [
  "**/*_pb2.py*",
  "**/*_pb2_grpc.py*",
]
pythonVersion = "3.10"
